Fixed few mistakes

--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -27,7 +27,7 @@
                  <button class="btn btn-lg btn-default btn-block">Click here to add</button>
             </div>
             
-           <a href="/campgrounds">Go back</a> 
+           <a href="/moviebase">Go back</a> 
         </form>
        </div>
       
